@@ -110,6 +110,7 @@ depth: 1
  * Adopt consistent `classname` (not `classnames`) attribute within the `wagtail.images.formats.Format` instance, including deprecation warnings (LB (Ben) Johnston)
  * Deprecate `context` argument of `construct_snippet_listing_buttons` hook (Sage Abdullah)
  * Deprecate legacy moderation system (Sage Abdullah)
+ * Update CI database versions (Jake Howard)
 
 
 ## Upgrade considerations - changes affecting all projects
